<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ShowIn="navigation_view">

    <group android:checkableBehavior="single">
       <item
           android:id="@+id/home"
           android:icon="@drawable/home"
           android:title="@string/Home"
           android:checked="true"/>
        <item
            android:id="@+id/City"
            android:icon="@drawable/city"
            android:title="@string/City"/>
        <item
            android:id="@+id/Temple"
            android:icon="@drawable/temple"
            android:title="@string/Temple"/>
        <item
            android:id="@+id/Park"
            android:icon="@drawable/park"
            android:title="@string/Park"/>
        <item
            android:id="@+id/setting"
            android:icon="@drawable/settings"
            android:title="@string/Setting"/>
        <item
            android:id="@+id/Share"
            android:icon="@drawable/baseline_share_24"
            android:title="@string/Share"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout"/>
    </group>

</menu>