<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ShowIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="@string/Setting"
            android:checked="true"/>
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/Home"
            android:checked="true"/>
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/Profile"/>
        <item
            android:id="@+id/order"
            android:icon="@drawable/order"
            android:title="@string/Order"/>
        <item
            android:id="@+id/payment"
            android:icon="@drawable/payment"
            android:title="@string/Payment"/>
        <item
            android:id="@+id/language"
            android:icon="@drawable/language"
            android:title="@string/language"/>


        <item
            android:id="@+id/logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout"/>
    </group>

</menu>